add logo and icon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Landing Page - Start Bootstrap Theme</title>
+  <title>עורך דין לתעבורה בצפון | מילכה אביחן משרד עו"ד</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/landing-page.min.css" rel="stylesheet">
-
+  <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
 </head>
 
 <body>
@@ -29,7 +29,7 @@
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <a class="navbar-brand" href="#">Start Bootstrap</a>
-      <a class="btn btn-primary" href="#">Sign In</a>
+      <a class="btn btn-primary" href="https://milka-law.co.il"><img style="height: 2rem;" src="img/navbar-logo.svg" alt="לוגו מילכה אביחן" /></a>
     </div>
   </nav>
 
