--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <a class="navbar-brand" href="https://milka-law.co.il">מילכה אביחן - משרד עורכי דין</a>
       <a class="btn btn-primary" href="https://milka-law.co.il"><img style="height: 2rem;" src="img/navbar-logo.svg" alt="לוגו מילכה אביחן" /></a>
     </div>
   </nav>
@@ -39,19 +39,11 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Build a landing page for your business or project and generate more leads!</h1>
+          <h1 class="mb-5">מילכה אביחן - משרד עורכי דין</h1>
+          <h2 class="mb-4">דיני תעבורה</h2>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-              </div>
-            </div>
-          </form>
+          <a class="btn btn-block btn-lg btn-primary" href="tel:050-7516112">050-7516112 - התקשרו עכשיו</a>
         </div>
       </div>
     </div>
