set footer phone number and text

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he" style="direction: rtl;">
 
 <head>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="Eliran Avihen">
 
   <title>עורך דין לתעבורה בצפון | מילכה אביחן משרד עו"ד</title>
 
@@ -28,8 +28,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="https://milka-law.co.il">מילכה אביחן - משרד עורכי דין</a>
       <a class="btn btn-primary" href="https://milka-law.co.il"><img style="height: 2rem;" src="img/navbar-logo.svg" alt="לוגו מילכה אביחן" /></a>
+      <a class="navbar-brand" href="https://milka-law.co.il">מילכה אביחן - משרד עורכי דין</a>
     </div>
   </nav>
 
@@ -43,7 +43,7 @@
           <h2 class="mb-4">דיני תעבורה</h2>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <a class="btn btn-block btn-lg btn-primary" href="tel:050-7516112">050-7516112 - התקשרו עכשיו</a>
+          <a class="btn btn-block btn-lg btn-primary" href="tel:050-7516112">התקשרו עכשיו - 050-7516112</a>
         </div>
       </div>
     </div>
@@ -148,19 +148,10 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Ready to get started? Sign up now!</h2>
+          <h2 class="mb-4">נתפסת נוהג בשכרות? צריך ייצוג של עו"ד?</h2>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-              </div>
-            </div>
-          </form>
+          <a class="btn btn-block btn-lg btn-primary" href="tel:050-7516112">התקשר עכשיו - 050-7516112</a>
         </div>
       </div>
     </div>
@@ -188,7 +179,7 @@
               <a href="#">Privacy Policy</a>
             </li>
           </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2020. All Rights Reserved.</p>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; milka-law.co.il 2020. All Rights Reserved.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
