edit header and title text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="Eliran Avihen">
 
-  <title>עורך דין לתעבורה בצפון | מילכה אביחן משרד עו"ד</title>
+  <title>עורך דין לתעבורה בצפון | מילכה אביחן משרד עו"ד | נהיגה בשכרות | נהיגה בפסילה</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <a class="btn btn-primary" href="https://milka-law.co.il"><img style="height: 2rem;" src="img/navbar-logo.svg" alt="לוגו מילכה אביחן" /></a>
-      <a class="navbar-brand" href="https://milka-law.co.il">מילכה אביחן - משרד עורכי דין</a>
+      <a class="navbar-brand" href="https://milka-law.co.il">מילכה אביחן - משרד עו"ד</a>
     </div>
   </nav>
 
@@ -39,11 +39,11 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">מילכה אביחן - משרד עורכי דין</h1>
-          <h2 class="mb-4">דיני תעבורה</h2>
+          <h1 class="mb-5">נתפסת נוהג בשכרות או בפסילה?</h1>
+          <h2 class="mb-4">ייעוץ ראשוני חינם!</h2>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <a class="btn btn-block btn-lg btn-primary" href="tel:050-7516112">התקשרו עכשיו - 050-7516112</a>
+          <a class="btn btn-block btn-lg btn-primary" href="tel:050-7516112">התקשר עכשיו - 050-7516112</a>
         </div>
       </div>
     </div>
