--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="features-icons-icon d-flex">
               <i class="icon-screen-desktop m-auto text-primary"></i>
             </div>
-            <h3>Fully Responsive</h3>
+            <h3>נהיגה בשכרות או תחת השפעת סמים</h3>
             <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
           </div>
         </div>
@@ -67,7 +67,7 @@
             <div class="features-icons-icon d-flex">
               <i class="icon-layers m-auto text-primary"></i>
             </div>
-            <h3>Bootstrap 4 Ready</h3>
+            <h3>נהיגה בזמן פסילה</h3>
             <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
           </div>
         </div>
@@ -76,7 +76,7 @@
             <div class="features-icons-icon d-flex">
               <i class="icon-check m-auto text-primary"></i>
             </div>
-            <h3>Easy to Use</h3>
+            <h3>נהיגה במהירות מופרזת</h3>
             <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
           </div>
         </div>
