add links to social media

--- a/index.html
+++ b/index.html
@@ -184,17 +184,17 @@
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
             <li class="list-inline-item mr-3">
-              <a href="#">
+              <a href="https://wa.me/972507516112">
                 <i class="fab fa-facebook fa-2x fa-fw"></i>
               </a>
             </li>
             <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-twitter-square fa-2x fa-fw"></i>
+              <a href="https://www.instagram.com/milka.avihen">
+                <i class="fab fa-whatsapp fa-2x fa-fw"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.fb.me/milkaavihen">
                 <i class="fab fa-instagram fa-2x fa-fw"></i>
               </a>
             </li>
