--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="he" style="direction: rtl;">
+<html lang="he" class="site-direction">
 
 <head>
 
@@ -24,6 +24,11 @@
 </head>
 
 <body>
+
+  <!-- Message Whatsapp-->
+  <a href="https://api.whatsapp.com/send?phone=972507516112&text=שלום, הגעתי מאתר עורכת דין מילכה אביחן אשמח לשיחה ראשונית לקבלת ייעוץ" class="float-button" target="_blank">
+    <i class="fab fa-whatsapp whatsapp-float"></i>
+  </a>
 
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
@@ -59,7 +64,6 @@
               <i class="icon-screen-desktop m-auto text-primary"></i>
             </div>
             <h3>נהיגה בשכרות או תחת השפעת סמים</h3>
-            <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -68,7 +72,6 @@
               <i class="icon-layers m-auto text-primary"></i>
             </div>
             <h3>נהיגה בזמן פסילה</h3>
-            <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -77,66 +80,67 @@
               <i class="icon-check m-auto text-primary"></i>
             </div>
             <h3>נהיגה במהירות מופרזת</h3>
-            <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-
-  <!-- Image Showcases -->
-  <section class="showcase">
-    <div class="container-fluid p-0">
-      <div class="row no-gutters">
-
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Fully Responsive Design</h2>
-          <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-screen-desktop m-auto text-primary"></i>
+            </div>
+            <h3>תאונות דרכים</h3>
+          </div>
         </div>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
-        <div class="col-lg-6 my-auto showcase-text">
-          <h2>Updated For Bootstrap 4</h2>
-          <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-layers m-auto text-primary"></i>
+            </div>
+            <h3>דוחות תנועה</h3>
+          </div>
         </div>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Easy to Use &amp; Customize</h2>
-          <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-check m-auto text-primary"></i>
+            </div>
+            <h3>משרד רישוי/המכון הרפואי</h3>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Testimonials -->
-  <section class="testimonials text-center bg-light">
+  <section class="testimonials text-center">
     <div class="container">
-      <h2 class="mb-5">What people are saying...</h2>
+      <h2 class="mb-5">עו"ד מילכה אביחן</h2>
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-12">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-            <h5>Margaret E.</h5>
-            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="עורכת דין מילכה אביחן">
+            <div class="h-100 text-center text-lg-right mt1">
+              <ul class="list-inline mb-0 mr-3 pl-4">
+                <li class="list-inline-item">
+                  <a href="https://wa.me/972507516112">
+                    <i class="fab fa-facebook fa-2x fa-fw"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item mr-3">
+                  <a href="https://www.instagram.com/milka.avihen">
+                    <i class="fab fa-whatsapp fa-2x fa-fw"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item mr-3">
+                  <a href="https://www.fb.me/milkaavihen">
+                    <i class="fab fa-instagram fa-2x fa-fw"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-            <h5>Fred S.</h5>
-            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-            <h5>Sarah W.</h5>
-            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
-          </div>
         </div>
       </div>
     </div>
@@ -158,19 +162,12 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer bg-light">
+  <footer class="footer bg-light" style="direction: ltr;">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
           <ul class="list-inline mb-2">
-            <li class="list-inline-item">
-              <a href="#">About</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Contact</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
+            <li class="list-inline-item"></li>
             <li class="list-inline-item">
               <a href="#">Terms of Use</a>
             </li>
@@ -184,8 +181,8 @@
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
             <li class="list-inline-item mr-3">
-              <a href="https://wa.me/972507516112">
-                <i class="fab fa-facebook fa-2x fa-fw"></i>
+              <a href="https://www.fb.me/milkaavihen">
+                <i class="fab fa-instagram fa-2x fa-fw"></i>
               </a>
             </li>
             <li class="list-inline-item mr-3">
@@ -194,8 +191,8 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.fb.me/milkaavihen">
-                <i class="fab fa-instagram fa-2x fa-fw"></i>
+              <a href="https://wa.me/972507516112">
+                <i class="fab fa-facebook fa-2x fa-fw"></i>
               </a>
             </li>
           </ul>
