--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-screen-desktop m-auto text-primary"></i>
+              <i class="fas fa-cannabis m-auto text-primary"></i>
             </div>
             <h3>נהיגה בשכרות או תחת השפעת סמים</h3>
           </div>
@@ -69,7 +69,7 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-layers m-auto text-primary"></i>
+              <i class="fas fa-ban m-auto text-primary"></i>
             </div>
             <h3>נהיגה בזמן פסילה</h3>
           </div>
@@ -77,7 +77,7 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-check m-auto text-primary"></i>
+              <i class="fas fa-tachometer-alt m-auto text-primary"></i>
             </div>
             <h3>נהיגה במהירות מופרזת</h3>
           </div>
@@ -87,7 +87,7 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-screen-desktop m-auto text-primary"></i>
+              <i class="fas fa-car-crash m-auto text-primary"></i>
             </div>
             <h3>תאונות דרכים</h3>
           </div>
@@ -103,7 +103,7 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-check m-auto text-primary"></i>
+              <i class="fas fa-gavel m-auto text-primary"></i>
             </div>
             <h3>משרד רישוי/המכון הרפואי</h3>
           </div>
