--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="משרד עורכי דין מילכה אביחן מתמחה בדיני תעבורה ועוסק בעבירות תעבורה מכל סוג נהיגה בשכרות או סמים, נהיגה בזמן פסילה, נהיגה במהירות העולה על המותר, תאונות דרכים, נהיגה ללא רישיון נהיגה, דוחות מסוג קנס וכו.
+      כמו כן, המשרד מייצג לקוחות מול המכון הרפואי לבטיחות בדרכים וכן, מול משרד רישוי. משרדנו מעניק יחס חם, אישי ומקצועי וזמין לכל שאלה בכל שעה">
   <meta name="author" content="Eliran Avihen">
-
+  <meta name="keywords" content="תעבורה, דיני תעבורה, עורך דין לתעבורה בצפון, מילכה אביחן, נהיגה בשכרות, מהירות מופרזת, שלילה, תאונת דרכים, דוח תנועה, טלפון נייד, משרד רישוי, מכון רפואי, נהיגה בפסילה, נהיגה תחת השפעת סמים" />
+  <meta name="robots" content="index,follow">
+  <meta name="google-site-verification" content="E3uAzsYQqYRkq750biYnJBoGUoxHexB-ySpt8TBF3yM" />
   <title>עורך דין לתעבורה בצפון | מילכה אביחן משרד עו"ד | נהיגה בשכרות | נהיגה בפסילה</title>
 
   <!-- Bootstrap core CSS -->
