--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
   <meta name="robots" content="index,follow">
   <meta name="google-site-verification" content="E3uAzsYQqYRkq750biYnJBoGUoxHexB-ySpt8TBF3yM" />
   <title>עורך דין לתעבורה בצפון | מילכה אביחן משרד עו"ד | נהיגה בשכרות | נהיגה בפסילה</title>
-
+  <meta property="og:title" content="עורך דין לתעבורה בצפון | מילכה אביחן משרד עורכי דין | נהיגה בשכרות | נהיגה בפסילה" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="משרד עורכי דין מילכה אביחן מתמחה בדיני תעבורה ועוסק בעבירות תעבורה מכל סוג נהיגה בשכרות או סמים, נהיגה בזמן פסילה, נהיגה במהירות העולה על המותר, תאונות דרכים, נהיגה ללא רישיון נהיגה, דוחות מסוג קנס וכו.
+    כמו כן, המשרד מייצג לקוחות מול המכון הרפואי לבטיחות בדרכים וכן, מול משרד רישוי. משרדנו מעניק יחס חם, אישי ומקצועי וזמין לכל שאלה בכל שעה" />
+  <meta property="og:locale" content="he_IL">
+  <meta property="og:url" content="https://law-milka.co.il/" />
+  <meta property="og:image" content="https://law-milka.co.il/img/testimonials-1.jpg" />
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
