--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               <a href="#">Privacy Policy</a>
             </li>
           </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; milka-law.co.il 2020. All Rights Reserved.</p>
+          <p class="text-muted small mb-4 mb-lg-0">כל הזכויות שמורות &copy; עו"ד מילכה אביחן 2020</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
